# starling_controller_templates

./: .gitignore  404.html  Makefile  README.md  cookiecutter.json  index.html  mkdocs.yml  requirements.txt  search.html
.github/workflows/: publish-docs.yml  remove_container_on_close.yaml  (+1 more)
brl/: index.html
brl_flight/: index.html
cpp_example_dev/: index.html
cpp_ros2_node_onboard_template/: cookiecutter.json
cpp_ros2_node_template/: cookiecutter.json
cpp_ros2_node_template/{{cookiecutter.package_name}}/: CMakeLists.txt  package.xml
cpp_ros2_node_template/{{cookiecutter.package_name}}/include/: main.hpp
cpp_ros2_node_template/{{cookiecutter.package_name}}/launch/: {{cookiecutter.package_name}}.xml
cpp_ros2_node_template/{{cookiecutter.package_name}}/src/: main.cpp
creating/: index.html
docker/: index.html
getting_started/: index.html
multiuav_kubernetes/: index.html
next_steps/: index.html
python_ros2_node_offboard_template/: cookiecutter.json
python_ros2_node_template/: cookiecutter.json
ros2_msgs_template/: cookiecutter.json
ros2_uav/: index.html
search/: search_index.json
simulation/: index.html
starling_template/: cookiecutter.json
testing/: test_all.sh
testing_with_docker_compose/: index.html
testing_with_kind/: index.html
tutorial/: README.md  brl.md  brl_flight.md  cpp_example_dev.md  creating.md  docker.md  getting_started.md  multiuav_kubernetes.md  next_steps.md  ros2_uav.md  simulation.md  testing_with_docker_compose.md  testing_with_kind.md
{{cookiecutter.project_name}}/: Dockerfile  README.md
(+22 files in other folders)
